--- a/main.css
+++ b/main.css
@@ -3656,3 +3656,20 @@ img.road_img {
     width: 97%;
   }
 }
+
+@media screen and (max-width: 767px) {
+  .hero {
+    height: 100vh;
+  }
+  .paragraph {
+    margin-right: 0;
+    margin-left: 0;
+    padding-right: 0;
+  }
+}
+
+@media screen and (max-width: 467px) {
+  .hero {
+    height: 100vh;
+  }
+}
