--- a/main.css
+++ b/main.css
@@ -3603,7 +3603,7 @@ textarea.w-select {
   text-align: center;
   letter-spacing: 9px;
   -webkit-text-stroke-width: 3px;
-  -webkit-text-stroke-color: #950739;
+  -webkit-text-stroke-color: #c91b21;
   text-shadow: -4px 3px 4px #0c285e;
   font-family: Pokemon Solid, sans-serif;
   position: static;
