--- a/main.css
+++ b/main.css
@@ -2680,7 +2680,7 @@ textarea.w-select {
 }
 
 .div-block-19 {
-  background-image: url("/images/poki.jpg");
+  background-image: url("/images/sd3.jpg");
   border-radius: 15px;
   background-position: 50%;
   background-repeat: no-repeat;
